# rustvita

./: .gitignore  Cargo.toml  Makefile  README.md  sceshaccgc.json  vita.json
.cargo/: config
psp2shell-rs/: Cargo.toml
psp2shell-rs/psp2shell-sys/: Cargo.toml  build.rs
psp2shell-rs/psp2shell-sys/src/: lib.rs
psp2shell-rs/src/: lib.rs
src/: audioout.rs  ctrl.rs  libc.rs  main.rs  psp2_shaders.rs  psp2_sys.rs
src/kernel/: mod.rs  process.rs  thread.rs
